# how-to-optimize-gemm

./: README.md
data/: .gitignore  README.md
docker/: Dockerfile  Makefile  bash_aliases  docker-entrypoint.sh  jupyter_server_config.json
notebooks/: Computing 4 elements of C at a time.ipynb  Computing a 4 x 4 block of C at a time.ipynb  Mlc learning with Tvm.ipynb  plot_gflops.ipynb
notebooks/how-to-optimize-gemm/: Computing 4 elements of C at a time.ipynb  Computing a 4 x 4 block of C at a time.ipynb  Matrix Multiplication Algorithms.ipynb  load_data.py
notebooks/machine-learning-compilation/: Mlc learning with Tvm.ipynb  untitled.dio
src/: .gitignore  CMakeLists.txt  MMult_1x4_4.c  MMult_1x4_6.c  MMult_1x4_7.c  MMult_1x4_8.c  MMult_1x4_9.c  MMult_4x4_10.c  MMult_4x4_11.c  MMult_4x4_12.c  MMult_4x4_13.c  MMult_4x4_14.c  MMult_4x4_15.c  MMult_4x4_3.c  MMult_4x4_4.c  MMult_4x4_5.c  MMult_4x4_6.c  MMult_4x4_7.c  MMult_4x4_8.c  MMult_4x4_9.c  test_MMult.c
